[project]
name = "rm-vision-model"
version = "0.1.0"
description = "Repostiory for relabelling a bunch of images from the XJTLU dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.41",
]
